Updated the README.md file

--- a/index.html
+++ b/index.html
@@ -19,21 +19,19 @@
   <body>
     <header>
       <nav>
-        <div><img src="assets/images/logo.svg" alt="logo" /></div>
+        <div class="logo"><img src="assets/images/logo.svg" alt="logo" /></div>
         <div class="menu-bar">
           <button id="menu-button">
             <img src="assets/images/icon-menu.svg" alt="menu-bar" />
           </button>
         </div>
-        <div class="menu-items">
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">New</a></li>
-            <li><a href="#">Popular</a></li>
-            <li><a href="#">Trending</a></li>
-            <li><a href="#">Categories</a></li>
-          </ul>
-        </div>
+        <ul class="menu-items">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">New</a></li>
+          <li><a href="#">Popular</a></li>
+          <li><a href="#">Trending</a></li>
+          <li><a href="#">Categories</a></li>
+        </ul>
       </nav>
     </header>
     <main>
